# pod-os-rust-client

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: client.rs  config.rs  errors.rs  lib.rs  log.rs
src/connection/: client.rs  mod.rs  pool.rs  resolver.rs  retry.rs  traits.rs
src/knowledge/: mod.rs
src/knowledge/docs/: communication.md  message_handling.md  neural_memory.md  neural_memory_retrieval.md
src/message/: constants.rs  decoder.rs  encoder.rs  errors.rs  header.rs  intents.rs  mod.rs  search.rs  types.rs  utils.rs  validate.rs
