[package]
name = "pod-os-client"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance async Rust client for the Pod-OS Gateway"
repository = "https://github.com/PointOfData/pod-os-rust-client"
license = "MIT"
keywords = ["pod-os", "gateway", "neural-memory", "ai", "client"]
categories = ["network-programming", "asynchronous"]

[dependencies]
tokio       = { version = "1", features = ["full"] }
bytes       = "1"
uuid        = { version = "1", features = ["v4"] }
dashmap     = "6"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "2"
once_cell   = "1"
reqwest     = { version = "0.12", features = ["json"], optional = true }
base64      = "0.22"
async-trait = "0.1"

[features]
default      = []
knowledge-ai = ["reqwest"]

[dev-dependencies]
tokio-test = "0.4"
